A few random code improvements